# ODROID-GO

./: CMakeLists.txt
src/: CMakeLists.txt
src/Fonts/: CMakeLists.txt
src/sensors/: CMakeLists.txt
src/sensors/ir/: CMakeLists.txt
src/utility/: CMakeLists.txt
src/web/: CMakeLists.txt
